2009-07-25  vadim  <vadim@vk.crocodile.org>

	* Cluster.cpp (Cluster::getMembersList): need to scan not only
	StateSyncClusterGroup child objects but also all
	FailoverClusterGroup objects in order to find all member
	firewalls. The program used to look only at StateSyncClusterGroup
	objects, which meant it did not recognize any members if state
	sync group was empty. This fixes issue #4 in the bug #2826765:
	"problems and suggestions for 3.1.0-b1187".

2009-07-24  vadim  <vadim@vk.crocodile.org>

	* Rule.cpp (PolicyRule::getBranch): fixed problem #4 "GUI crash
	when setting action to be a chain." reported in the bug #2826765:
	"problems and suggestions for 3.1.0-b1187". The GUI crashed when
	policy rule in the cluster policy was set to action "Chain".

2009-07-17  vadim  <vadim@vk.crocodile.org>

	* Resources.cpp (Resources::getResourceStrList): This function
	provides a way to create lists of parameters in resource files.

2009-07-16  vadim  <vadim@vk.crocodile.org>

	* FWObjectDatabase_11.xslt: Bumped data file format to 12; system
	group "Clusters" moves to the top level of the tree. Fixes #167

2009-07-13  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler.cpp (checkForZeroAddr::findZeroAddress): followup
	for bug #2820152: AddressRange object has an address but no
	netmask. Have to check for getNetmaskPtr() == NULL where
	necessary.

2009-07-11  vadim  <vadim@vk.crocodile.org>

	* AddressRange.h (libfwbuilder): fixed bug #2820152: "Address
	ranges and other such need IPv4/v6 typing". AddressRange object
	should be recognized and removed from the rule if it is used in
	ipv6 rule set. To do this, add virtual method
	hasInetAddress() (should return true) to indicate that this object
	has an address. This works since virtual method getAddressPtr()
	has been implemented anyway.

	* VERSION (VERSION): started v3.0.6 in the current production branch

2009-07-09  Vadim Kurland  <vadim@vk.crocodile.org>
