@@ -1,5 +1,8 @@
 2009-07-25  vadim  <vadim@vk.crocodile.org>
 
+	* Compiler.h (fwcompiler): Deprecated object caching in compiler,
+	fixes #228
+
 	* Cluster.cpp (Cluster::getMembersList): need to scan not only
 	StateSyncClusterGroup child objects but also all
 	FailoverClusterGroup objects in order to find all member
